[package]
name = "ascii_utils"
version = "0.9.0"
description = "Utilities to handle ASCII characters"

authors = ["Jonas mg (https://github.com/tredoe)"]
repository = "https://github.com/tredoe/ascii_utils"
documentation = "https://docs.rs/ascii_utils"

readme = "README.md"
keywords = ["ascii"]
license = "MPL-2.0"
